[package]
name = "gdk"
version = "0.2.0"
authors = ["The Gtk-rs Project Developers"]
build = "build.rs"

description = "Rust bindings for the GDK library"
repository = "https://github.com/gtk-rs/gdk"
license = "MIT"
homepage = "http://gtk-rs.org/"
documentation = "http://gtk-rs.org/docs/gdk/"

readme = "README.md"

keywords = ["gdk", "gtk", "gtk-rs", "gnome", "GUI"]

[lib]
name = "gdk"

[dependencies]
cairo-rs = "0.0.7"
gdk-pixbuf-sys = "0.2.1"
gdk-sys = "0.2.1"
glib = "0.0.7"
libc = "0.1"
