[package]
name = "gdk"
license = "MIT"
homepage = "http://gtk-rs.org/"
authors = ["The Gtk-rs Project Developers"]
keywords = ["gdk", "gtk", "gtk-rs", "gnome", "GUI"]
readme = "README.md"
documentation = "http://gtk-rs.org/docs/gdk/"
version = "0.13.1"
description = "Rust bindings for the GDK 3 library"
repository = "https://github.com/gtk-rs/gdk"
build = "build.rs"
exclude = [
    "gir-files/*",
]

[lib]
name = "gdk"

[features]
v3_16 = ["gdk-sys/v3_16"]
v3_18 = ["v3_16", "gdk-sys/v3_18"]
v3_20 = ["v3_18", "gdk-sys/v3_20"]
v3_22 = ["v3_20", "gdk-sys/v3_22"]
v3_24 = ["v3_22", "gdk-sys/v3_24"]
dox = ["gdk-sys/dox", "glib/dox", "gio/dox", "gdk-pixbuf/dox", "cairo-rs/dox", "pango/dox"]
purge-lgpl-docs = ["gtk-rs-lgpl-docs", "cairo-rs/purge-lgpl-docs", "gdk-pixbuf/purge-lgpl-docs", "gio/purge-lgpl-docs"]
embed-lgpl-docs = ["gtk-rs-lgpl-docs", "cairo-rs/embed-lgpl-docs", "gdk-pixbuf/embed-lgpl-docs", "gio/embed-lgpl-docs"]

[package.metadata.docs.rs]
features = ["dox", "embed-lgpl-docs"]

[build-dependencies.gtk-rs-lgpl-docs]
version = "0.1"
optional = true

[dependencies]
gobject-sys = "0.10.0"
glib-sys = "0.10.0"
glib = "0.10.0"
pango = "0.9.0"
gio = "0.9.0"
gio-sys = "0.10.0"
gdk-pixbuf = "0.9.0"
cairo-sys-rs = "0.10.0"
cairo-rs = "0.9.0"
gdk-sys = "0.10.0"
libc = "0.2"
bitflags = "1.0"

[dev-dependencies]
gir-format-check = "^0.1"
